# tinyvcs

./: CMakeLists.txt  main.cpp  player.cpp  readme.md  safe_vector.cpp
include/: chain.h  convert.h  cu_utils.h  ffmpeg.h  ffmpeg_utils.h  frame.h  image_utils.h  infer.h  iutils.h  player.h  safe_vector.h  safevec.h  sync_queue.h  tick.h  video_stream.h
include/cuda/: convert_frame.h  hw_decode.h  memory_pool.h  post_processing.cuh  preprocess.h
include/cuda/op/: avframe_op.h  letterbox_op.h  op.h  preprocess_op.h
include/json/: jsonbuilder.h
include/tensorrt/: engine.h  int.h
include/websocket/: client.h
include/zeromq/: client.h
samples/: engine_test.cpp  main.cpp  queue_test.cpp  video_test.cpp
source/: chain.cpp  convert.cpp  convert.cu  frame.cpp  image_utils.cpp  infer.cpp  iutils.cpp  player.cpp  safevec.cpp  sync_queue.cpp  video_stream.cpp
source/cuda/: convert.cu  convert_frame.cpp  convert_yuv.cu  hw_decode.cpp  memory_pool.cpp  post_processing.cu  preprocess.cu
source/cuda/op/: letterbox_op.cpp  preprocess_op.cpp
source/json/: jsonbuilder.cpp  jsonbuilder.h
source/tensorrt/: engine.cpp  int8.cpp
source/websocket/: client.cpp  client.h
source/zeromq/: client.cpp
